--- a/csim2.vcxproj
+++ b/csim2.vcxproj
@@ -19,13 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="composite_system.c" />
     <ClCompile Include="csim2.c" />
+    <ClCompile Include="StrictlyProperBlock.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="composite_system.h" />
-    <ClInclude Include="solver_types.h" />
-    <ClInclude Include="user_types.h" />
+    <ClInclude Include="StrictlyProperBlock.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1E802AF7-E608-42ED-A2D0-BB119F40E884}</ProjectGuid>
@@ -113,6 +111,7 @@
       <SDLCheck>true</SDLCheck>
       <CompileAs>CompileAsC</CompileAs>
       <PreprocessorDefinitions>_USE_MATH_DEFINES;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,6 +144,7 @@
       <AdditionalOptions>/Qvec-report:2 %(AdditionalOptions)</AdditionalOptions>
       <PreprocessorDefinitions>_USE_MATH_DEFINES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsC</CompileAs>
+      <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
