re-organized a bit. It was getting a little wild

--- a/csim2.vcxproj
+++ b/csim2.vcxproj
@@ -19,10 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="blockSystem.c" />
     <ClCompile Include="csim2.c" />
+    <ClCompile Include="integrator.c" />
     <ClCompile Include="StrictlyProperBlock.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="blockSystem.h" />
+    <ClInclude Include="integrator.h" />
     <ClInclude Include="StrictlyProperBlock.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
