--- a/mexrk4/mexrk4.vcxproj
+++ b/mexrk4/mexrk4.vcxproj
@@ -13,6 +13,11 @@
   <ItemGroup>
     <ClCompile Include="mexrk4.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\csim2\csim2.vcxproj">
+      <Project>{1e802af7-e608-42ed-a2d0-bb119f40e884}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{99D9F467-B8D5-409D-B91C-3362A9C2E071}</ProjectGuid>
     <RootNamespace>mexrk4</RootNamespace>
