working on the dll interface. I think I need to add a destructer function to each block object? or at least pass in a storage destructor function to the block system? somehow free the systemStorage on a blockSystem.

--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="blockSystem.h" />
+    <ClInclude Include="dllInterface.h" />
     <ClInclude Include="integrator.h" />
     <ClInclude Include="solvers.h" />
     <ClInclude Include="StrictlyProperBlock.h" />
