--- a/csim2heap/csim2heap.vcxproj
+++ b/csim2heap/csim2heap.vcxproj
@@ -19,20 +19,24 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="blockSystem.c" />
-    <ClCompile Include="integrator.c" />
-    <ClCompile Include="solvers.c" />
+    <ClCompile Include="blockSystem_heap.c" />
+    <ClCompile Include="blockSystemStorage_heap.c" />
+    <ClCompile Include="integrator_heap.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="blockSystem.h" />
-    <ClInclude Include="blockSystemStorage.h" />
-    <ClInclude Include="integrator.h" />
-    <ClInclude Include="solvers.h" />
-    <ClInclude Include="StrictlyProperBlock.h" />
+    <ClInclude Include="blockSystem_heap.h" />
+    <ClInclude Include="blockSystemStorage_heap.h" />
+    <ClInclude Include="dllInterface.h" />
+    <ClInclude Include="integrator_heap.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\csim2\csim2.vcxproj">
+      <Project>{1e802af7-e608-42ed-a2d0-bb119f40e884}</Project>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1E802AF7-E608-42ED-A2D0-BB119F40E884}</ProjectGuid>
-    <RootNamespace>csim2</RootNamespace>
+    <ProjectGuid>{293D3C48-6E42-4BE6-995D-296B57C39C36}</ProjectGuid>
+    <RootNamespace>csim2heap</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
