--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -20,12 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="blockSystem.c" />
+    <ClCompile Include="firstOrderLag.c" />
     <ClCompile Include="integrator.c" />
     <ClCompile Include="solvers.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="blockSystem.h" />
     <ClInclude Include="blockSystemStorage.h" />
+    <ClInclude Include="firstOrderLag.h" />
     <ClInclude Include="integrator.h" />
     <ClInclude Include="solvers.h" />
     <ClInclude Include="StrictlyProperBlock.h" />
