--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="blockSystem.c" />
     <ClCompile Include="firstOrderLag.c" />
     <ClCompile Include="integrator.c" />
+    <ClCompile Include="secondOrderSystem.c" />
     <ClCompile Include="solvers.c" />
   </ItemGroup>
   <ItemGroup>
@@ -29,6 +30,7 @@
     <ClInclude Include="blockSystemStorage.h" />
     <ClInclude Include="firstOrderLag.h" />
     <ClInclude Include="integrator.h" />
+    <ClInclude Include="secondOrderSystem.h" />
     <ClInclude Include="solvers.h" />
     <ClInclude Include="StrictlyProperBlock.h" />
   </ItemGroup>
