--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="integrator.c" />
     <ClCompile Include="secondOrderSystem.c" />
     <ClCompile Include="solvers.c" />
+    <ClCompile Include="transferFunction.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="blockSystem.h" />
@@ -33,6 +34,7 @@
     <ClInclude Include="secondOrderSystem.h" />
     <ClInclude Include="solvers.h" />
     <ClInclude Include="StrictlyProperBlock.h" />
+    <ClInclude Include="transferFunction.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1E802AF7-E608-42ED-A2D0-BB119F40E884}</ProjectGuid>
