removed csim2heap project
didn't need that project at all. much cleaner now.

--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="blockSystem.h" />
     <ClInclude Include="blockSystemStorage.h" />
     <ClInclude Include="constructors.h" />
+    <ClInclude Include="dllInterface.h" />
     <ClInclude Include="firstOrderLag.h" />
     <ClInclude Include="integrator.h" />
     <ClInclude Include="secondOrderSystem.h" />
