moving demo to mex demo
demo was really more meant for the mex interface. You could use a similar interface for the command line or something but since you have the source I think it'll be easier to just include the files you need for the c demo

--- a/csim2/csim2.vcxproj
+++ b/csim2/csim2.vcxproj
@@ -39,6 +39,9 @@
     <ClInclude Include="StrictlyProperBlock.h" />
     <ClInclude Include="transferFunction.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1E802AF7-E608-42ED-A2D0-BB119F40E884}</ProjectGuid>
     <RootNamespace>csim2</RootNamespace>
